image in folder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="image/imag2.jpg">
         </section>
      
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2531.2348722343568!2d3.0538965!3d50.622753499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d59e9567814f%3A0x7c11271d1ac28512!2s17%20Pl.%20de%20la%20Solidarit%C3%A9%2C%2059000%20Lille!5e0!3m2!1sfr!2sfr!4v1693414662633!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <!--home-->
     <!--build-->
